Fix for Input element shrinking on small screens.

--- a/components/Input/Input.css
+++ b/components/Input/Input.css
@@ -12,8 +12,8 @@
 .inputDiv{
     display: flex;
     flex-direction: column;
-    flex: 1;
     box-sizing: border-box;
+    flex: 1 0 auto;
 }
 
 .input{
